examples/memory/negative/02_in_block_clear.skd
// Negative memory example 02: clear() inside active place in block is forbidden.

fn render_frame(Memory frame_memory) returns Int {
    place in frame_memory {
        new Text line_text = "hello"
        frame_memory.clear()
        output(line_text)
    }

    return 0
}
